Functional Filters
Probably will be more of a pain later but as of now the filters work.

UI is completely destroyed as I do NOT know html at all.